fdo#74524: ODF import: fix unhandled exception in annotation import

Crash with unhandled UnknownPropertyException when trying to get "Name"
property from a PageNumber field.

Change-Id: I501cc138caba034c85630519014b94d783ab8f39